harbor-final/templates/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor-final
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - harbor.example.com
      secretName: harbor-tls
  rules:
    - host: harbor.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: harbor
                port:
                  number: 80
